# maloja-rs

./: .env.dev  Cargo.toml  Containerfile  Dockerfile  README.md  compose-dev.yml  compose.yml  docker-compose.yml
src/: lib.rs  main.rs  timeranges.rs  uri.rs
src/api/: audioscrobbler.rs  listenbrainz.rs  maloja_2.rs  mod.rs
src/configuration/: logging.rs  mod.rs
src/database/: errors.rs  import.rs  mod.rs  repository.rs  views.rs
src/database/repository/: get_or_create.rs  history.rs  info.rs  mod.rs  resolve.rs  scrobbles.rs  stats.rs
src/entity/: album.rs  album_artist.rs  artist.rs  mod.rs  scrobble.rs  track.rs  track_artist.rs
src/server/: mod.rs  pages.rs
src/tests/: fixtures.rs  mod.rs
src/web/special/: api_explorer.html
src/web/static/: maloja.css
templates/: about.html  info_album.html  info_artist.html  info_track.html
templates/abstracts/: base.html
templates/macros/: charts.askama  entities.askama  entities.html  lists.askama  pulse.askama
